--- a/package.json
+++ b/package.json
@@ -28,15 +28,21 @@
     "typescript": "^3.9.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/koa-multer": "^1.0.0",
+    "@types/koa-static": "^4.0.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.12.0",
     "koa-bodyparser": "^4.3.0",
     "koa-logger": "^3.2.1",
     "koa-multer": "^1.0.2",
     "koa-router": "^8.0.8",
-    "mongodb": "^3.5.7",
+    "koa-static": "^5.0.0",
+    "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "reflect-metadata": "^0.1.13",
     "routing-controllers": "^0.8.1",
     "typedi": "^0.8.0",
